test/scc_test/decl/semantic-errors/013.t
struct
{
    int a;
    int a;
};